--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Projeto para avaliação final da matéria de Backend, no IESB, com o professor Guilherme",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^3.3.2"
   }
 }
