--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^1.19.0",
     "uuid": "^3.3.2"
   }
 }
